objects/pkgviz__In_App_Prompt__mdt.object
<CustomObject>
    <fields>
        <fullName>pkgviz__Brand_Button_Label__c</fullName>
        <label>Brand Button Label</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pkgviz__Brand_Button_URL__c</fullName>
        <label>Brand Button URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pkgviz__Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pkgviz__Learn_More_Link__c</fullName>
        <label>Learn More Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pkgviz__Prompt_Popover_Location__c</fullName>
        <label>Prompt Popover Location</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>slds-popover_prompt_top-left</fullName>
                    <default>true</default>
                    <label>slds-popover_prompt_top-left</label>
                </value>
                <value>
                    <fullName>slds-popover_prompt_top</fullName>
                </value>
                <value>
                    <fullName>slds-popover_prompt_top-right</fullName>
                </value>
                <value>
                    <fullName>slds-popover_prompt_bottom-right</fullName>
                </value>
                <value>
                    <fullName>slds-popover_prompt_bottom</fullName>
                </value>
                <value>
                    <fullName>slds-popover_prompt_bottom-left</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pkgviz__Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>In App Prompt</label>
    <pluralLabel>In App Prompts</pluralLabel>
</CustomObject>